[package]
name = "mqtrader"
version = "0.1.0"
edition = "2024"

[dependencies]
# -- Memory
jemallocator = "0.3"
# -- Async
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "^1.0.102"

nautilus-system = { git = "https://github.com/nautechsystems/nautilus_trader.git" , branch = "master" }
nautilus-trading = { git = "https://github.com/nautechsystems/nautilus_trader.git" , branch = "master" }
nautilus-live = { git = "https://github.com/nautechsystems/nautilus_trader.git", branch = "master" }
nautilus-common = { git = "https://github.com/nautechsystems/nautilus_trader.git", branch = "master" }
nautilus-model = { git = "https://github.com/nautechsystems/nautilus_trader.git", branch = "master" }
nautilus-core = { git = "https://github.com/nautechsystems/nautilus_trader.git", branch = "master" }
nautilus-data = { git = "https://github.com/nautechsystems/nautilus_trader.git", branch = "master" }
nautilus-portfolio = { git = "https://github.com/nautechsystems/nautilus_trader.git", branch = "master" }
nautilus-okx = { git = "https://github.com/nautechsystems/nautilus_trader.git", branch = "master" }


# -- Strategy
dynwrap-strategy = { git = "https://github.com/mountainsea-lab/mq-strategy.git" , branch = "main"}
# -- staticwrap-strategy net
#staticwrap-strategy = { git = "https://github.com/mountainsea-lab/mq-strategy.git" , branch = "main"}
# -- staticwrap-strategy local
staticwrap-strategy = { path = "/Volumes/wdata/mountainsea-lab/mq-strategy-L/strategy/staticwrap-strategy" }

# -- Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ustr = { version = "1.1.0", features = ["serde"] }
log = "0.4.29"
ahash = { version = "0.8.12", features = ["serde"] }

[dev-dependencies]
tempfile = "3.6"  # 目前最新版